--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -37,7 +37,7 @@
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/jquery.dataTables.min.js"></script>
     <script src="./js/lib/dataTables.scroller.min.js"></script>
-    {{.RunOktaSignin | safeHTML}}
+    {{.RunCheck1 | safeHTML}}
 </head>
 
 <body data-theme="light">
@@ -48,7 +48,7 @@
         <div id="app-content-area">
             <div class="cstats-data-container myOrg-container">
                 <div class="org-nav-tab">
-                    {{ .LogoutButton | safeHTML }}
+                    {{ .Button1 | safeHTML }}
                 </div>
                 <div class="myOrg-inner-container">
                     <div class="usage-stats-header">
@@ -123,7 +123,7 @@
                                 Storage Savings
                             </div>
                         </div>
-                        {{ .ClusterStatsDeleteIndex | safeHTML }}
+                        {{ .Popup1 | safeHTML }}
                     </div>
                     <div id="cstats-app-footer">
                         2023 &copy; SigLens
@@ -146,8 +146,8 @@
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
 
-    {{ .RunRbacAuthCheck | safeHTML }}
-    {{ .RunSaasAuthCheck | safeHTML }}
+    {{ .RunCheck2 | safeHTML }}
+    {{ .RunCheck3 | safeHTML }}
 </body>
 
 </html>
