--- a/static/metrics.html
+++ b/static/metrics.html
@@ -36,6 +36,7 @@
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
+    {{ .RunCheck1 | safeHTML }}
 </head>
 
 <body data-theme="light">
@@ -153,6 +154,8 @@
     <script src="./js/search.js?cb=1_1_10"></script>
     <script src="./js/metrics.js?cb=1_1_10"></script>
 
+    {{ .RunCheck2 | safeHTML }}
+    {{ .RunCheck3 | safeHTML }}
 </body>
 
 </html>
