--- a/static/all-alerts.html
+++ b/static/all-alerts.html
@@ -36,6 +36,7 @@
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
+    {{ .RunCheck1 | safeHTML }}
 </head>
 
 <body data-theme="light">
@@ -83,6 +84,8 @@
     <script src="./js/all-alerts.js?cb=1_1_10"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
 
+    {{ .RunCheck2 | safeHTML }}
+    {{ .RunCheck3 | safeHTML }}
 </body>
 
 </html>
