--- a/static/service-health-overview.html
+++ b/static/service-health-overview.html
@@ -34,6 +34,8 @@
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
+    {{ .RunCheck1 | safeHTML }}
+
     <title>SigLens</title>
 </head>
 <body data-theme="light">
@@ -119,6 +121,9 @@
     <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./js/service-health-overview.js?cb=1_1_10"></script>
+
+    {{ .RunCheck2 | safeHTML }}
+    {{ .RunCheck3 | safeHTML }}
 </body>
 
 </html>
