Add frontend hooks (#493)
* Add a startup hook

* Add hooks for serving HTML files

* Setup procedure for html template hooks

* Setup template for linking to ent-only html page

* Setup JavaScript templating

* Cleanup

* Add hooks for cluster stats

* Add hooks for org settings

* Add hooks for js cluster stats

* Add hooks for common.js

* Add navbar.js hooks

* Add hooks for settings.js

* Add hooks for test-data.js

* Add hooks for index.html

* Fixup for serving index.html

* Cleanup

* fixup

* fixup

* Remove debugging log

* Update names

* Remove unneeded hook

* Add basic hooks to more html files

* Remove unneeded hook

--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -37,6 +37,7 @@
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/jquery.dataTables.min.js"></script>
     <script src="./js/lib/dataTables.scroller.min.js"></script>
+    {{.RunCheck1 | safeHTML}}
 </head>
 
 <body data-theme="light">
@@ -47,6 +48,7 @@
         <div id="app-content-area">
             <div class="cstats-data-container myOrg-container">
                 <div class="org-nav-tab">
+                    {{ .Button1 | safeHTML }}
                 </div>
                 <div class="myOrg-inner-container">
                     <div class="usage-stats-header">
@@ -121,6 +123,7 @@
                                 Storage Savings
                             </div>
                         </div>
+                        {{ .Popup1 | safeHTML }}
                     </div>
                     <div id="cstats-app-footer">
                         2023 &copy; SigLens
@@ -143,6 +146,8 @@
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
 
+    {{ .RunCheck2 | safeHTML }}
+    {{ .RunCheck3 | safeHTML }}
 </body>
 
 </html>
