--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,8 @@
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
+
+    {{ .RunCheck1 | safeHTML }}
 </head>
 
 <body data-theme="light">
@@ -398,6 +400,9 @@
     <script src="./js/dashboard-from-logs.js?cb=1_1_10"></script>
     <script src="./js/query-builder.js"></script>
     <script src="./js/lib/echarts.min.js"></script>
+
+    {{ .RunCheck2 | safeHTML }}
+    {{ .RunCheck3 | safeHTML }}
 
 </body>
 
