--- a/static/org-settings.html
+++ b/static/org-settings.html
@@ -35,6 +35,7 @@
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
+    {{ .RunCheck1 | safeHTML }}
 </head>
 
 <body data-theme="light">
@@ -45,6 +46,7 @@
         <div class="myOrg">
             <div class="myOrg-container">
                 <div class="org-nav-tab">
+                    {{ .Button1 | safeHTML }}
                 </div>
 
                 <div class="myOrg-inner-container">
@@ -55,11 +57,20 @@
                         <table id="org-settings-table">
                             <tr>
                                 <th>Organization Name</th>
-                                <td id="orgName">SigLens</td>
+                                {{ if .OrgSettingsOrgName }}
+                                    {{ .OrgSettingsOrgName | safeHTML }}
+                                {{ else }}
+                                    <td id="orgName">SigLens</td>
+                                {{ end }}
                             </tr>
                             <tr>
                                 <th>Retention</th>
-                                <td id="retention-days-value">4 days</td>
+                                {{ .OrgSettingsRetentionPeriod | safeHTML }}
+                                {{ if .OrgSettingsRetentionPeriod }}
+                                    {{ .OrgSettingsRetentionPeriod | safeHTML }}
+                                {{ else }}
+                                    <td id="retention-days-value">4 days</td>
+                                {{ end }}
                             </tr>
                             <tr>
                                 <th>Persistent Queries</th>
@@ -80,8 +91,7 @@
                                 </td>
                             </tr>
                         </table>
-                        
-
+                        {{ .OrgSettingsExtras | safeHTML }}
                     </div>
                 </div>
                 <div class="popupOverlay">
@@ -119,6 +129,10 @@
     <script src="./js/index.js?cb=1_1_10"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
     <script src="./js/settings.js?cb=1_1_10"></script>
+    {{ .OrgSettingsExtraImports | safeHTML }}
+
+    {{ .RunCheck2 | safeHTML }}
+    {{ .RunCheck3 | safeHTML }}
 
 </body>
 
