--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -397,23 +397,25 @@
                             <span class="slider round"></span>
                         </label>
                     </div>
-                <div class="legendPlacementContainer">
-                    <div class="dropDownTitle dropDown-legend" title="Click to change the legend placement">
-                        <span>Legend Placement</span>
-                        <div class="caret"></div>
+                    <div class="legendPlacementContainer">
+                        <div class="dropDownTitle dropDown-legend" title="Click to change the legend placement">
+                            <span>Legend Placement</span>
+                            <div class="caret"></div>
+                        </div>
+                        <div class="placement-options">
+                        <ul class="editPanelMenu editPanelMenu-legend" id="legendPlacementDropdown">
+                            <div class="editPanelMenu-options legend-options" data-value="left">
+                                <li>Left</li>
+                            </div>
+                            <div class="editPanelMenu-options legend-options" data-value="right">
+                                <li>Right</li>
+                            </div>
+                            <div class="editPanelMenu-options legend-options" data-value="bottom">
+                                <li>Bottom</li>
+                            </div>
+                        </ul>
+                        </div>
                     </div>
-                    <ul class="editPanelMenu editPanelMenu-legend" id="legendPlacementDropdown">
-                        <div class="editPanelMenu-options legend-options" data-value="left">
-                            <li>Left</li>
-                        </div>
-                        <div class="editPanelMenu-options legend-options" data-value="right">
-                            <li>Right</li>
-                        </div>
-                        <div class="editPanelMenu-options legend-options" data-value="bottom">
-                            <li>Bottom</li>
-                        </div>
-                    </ul>
-                </div>
                 </div>
                 <div class="dropDownTitle dropDown-color active">
                     <span>Color Palette</span>
