show values options and textsize for bars

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -388,6 +388,24 @@
                         <li>Log Lines</li>
                     </div>
                 </ul>
+                <div class="show-bar-values" id="show-values-options">
+                    <br>
+                    <label class="show-values-label" style="font-size: large;">Show Values:</label>
+                    <div>
+                        <label class="show-values-radio">
+                            <input type="radio" name="showValuesOption" value="always" checked> Always
+                        </label>
+                        <label class="show-values-radio">
+                            <input type="radio" name="showValuesOption" value="never"> Never
+                        </label>
+                        <label class="show-values-radio">
+                            <input type="radio" name="showValuesOption" value="auto"> Auto
+                        </label>
+                    </div>
+                    <br>
+                    <label for="textSize" style="font-size: large;">Text Size:</label>
+                    <input type="range" id="textSize" name="textSize" min="10" max="30" step="1" value="14">
+                </div>  
                 <div class="dropDownTitle dropDown-color active">
                     <span>Color Palette</span>
                     <div class="caret"></div>
