--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -79,11 +79,11 @@
                     <div class="duration">
                         <div class="input-box">
                             <span>Min Duration</span>
-                            <input class="form-control" id="min-duration-input" placeholder="" type="text">
+                            <input class="form-control" id="min-duration-input" placeholder="e.g. 1.2s,100ms,500us" type="text">
                         </div>
                         <div class="input-box tags-second">
                             <span>Max Duration</span>
-                            <input class="form-control" id="max-duration-input" placeholder="" type="text">
+                            <input class="form-control" id="max-duration-input" placeholder="e.g. 1.2s,100ms,500us" type="text">
                         </div>
                     </div>
                     <div class="input-box">
