--- a/static/test-data.html
+++ b/static/test-data.html
@@ -46,6 +46,7 @@
         <div class="myOrg">
             <div class="myOrg-container">
                 <div class="org-nav-tab">
+                    {{ .Button1 | safeHTML }}
                 </div>
 
                 <div class="myOrg-inner-container">
