Setting and Style

--- a/static/org-settings.html
+++ b/static/org-settings.html
@@ -54,7 +54,7 @@
                         <div id="api-keys-headings">
                             <p class="caption">Personalize your organization's settings</p>
                         </div>
-                        <table class="org-settings-table">
+                        <table class="org-settings-table" id="org-settings-table">
                             <tr>
                                 <th>Organization Name</th>
                                 {{ if .OrgSettingsOrgName }}
