--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -330,7 +330,7 @@
                                 <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg" alt="retract">
                             </button>
                             <div class="dropdown-menu box-shadow" aria-labelledby="index-btn"
-                                id="metrics-query-language-options">
+                                id="query-language-options">
                                 <li id="option-0" class="panEdit-query-language-option active">PromQL</li>
                             </div>
                         </div>
