--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -73,7 +73,7 @@
                                             <div id="now-90d" class="range-item">90 Days</div>
                                         </div>
                                         <div class="inner-range">
-                                            <div id="now-7d" class="range-item">7 Days</div>
+                                            <div id="now-7d" class="range-item active">7 Days</div>
                                             <div id="now-180d" class="range-item">180 Days</div>
                                         </div>
                                         <div class="inner-range">
