--- a/static/service-health-overview.html
+++ b/static/service-health-overview.html
@@ -69,7 +69,7 @@
                                         <div id="now-7d" class="range-item">7 Days</div>
                                     </div>
                                     <div class="inner-range">
-                                        <div id="now-1h" class="range-item">1 Hr</div>
+                                        <div id="now-1h" class="range-item active">1 Hr</div>
                                         <div id="now-6h" class="range-item">6 Hrs</div>
                                     </div>
                                 </div>
