--- a/static/service-health.html
+++ b/static/service-health.html
@@ -50,7 +50,34 @@
         </div>
 
         <div id="dashboard" class="p-20">
-            <div class="subsection-navbar">
+            <div class="subsection-navbar align-items-end justify-content-between">
+                <div class="dropdown" id="cstats-time-picker">
+                    <button class="btn dropdown-toggle" type="button" id="date-picker-btn"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                        data-bs-toggle="dropdown" title="Pick the time window">
+                        <span>Time Picker</span>
+                        <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
+                        <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
+                    </button>
+                    <div class="dropdown-menu daterangepicker" aria-labelledby="index-btn"
+                        id="daterangepicker ">
+                        <p class="dt-header">Search the last</p>
+                        <div class="ranges">
+                            <div class="inner-range">
+                                <div id="now-15m" class="range-item active">15 Mins</div>
+                                <div id="now-24h" class="range-item">24 Hrs</div>
+                            </div>
+                            <div class="inner-range">
+                                <div id="now-30m" class="range-item">30 Mins</div>
+                                <div id="now-6h" class="range-item">6 Hrs</div>
+                            </div>
+                            <div class="inner-range">
+                                <div id="now-1h" class="range-item">1 Hr</div>
+                                <div id="now-7d" class="range-item">7 Days</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="mt-3">
                 <input type="text" class="search-input" placeholder="Search and Filter based on resource attributes">
@@ -71,6 +98,7 @@
     <script src="./js/common.js?cb=1_1_10"></script>
     <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/service-health.js?cb=1_1_10"></script>
+    <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
 
     {{ .RunCheck2 | safeHTML }}
