--- a/static/test-data.html
+++ b/static/test-data.html
@@ -84,7 +84,7 @@
                                             <div class="w-100" style="margin-right: 20px;">
                                                 <label for="Platform">Platform</label>
                                                 <input type="text" placeholder="" class="form-control"
-                                                    id="platform-input">
+                                                    id="platform-input" readonly>
                                             </div>
                                         </div>
                                     </div>
