--- a/static/test-data.html
+++ b/static/test-data.html
@@ -103,7 +103,7 @@
                                     <p>Test the pipes by running the following command in your terminal:</p>
                                     <div class="position-relative">
                                         <textarea name="" id="verify-command" cols="30" rows="6"
-                                            class="form-control copyable"></textarea>
+                                            class="form-control copyable" readonly></textarea>
                                     </div>
                                 </div>
                             </div>
