Fix #558: Search button disabled when incorrect query

--- a/static/index.html
+++ b/static/index.html
@@ -61,7 +61,7 @@
                 <div id = "tabs-1">
                     <div class="query-box">
                         <input class="form-control query-text" id="query-input" type="text" disabled="disabled">
-                        <div class="search-img" id="query-builder-btn"> </div>
+                        <button class="search-img" id="query-builder-btn"></button>
                     </div>
                     <div class="filter-info">
                         <div id="filter-container">
