Feat: Add Clear Button to Reset Query Builder (#549) (#637)
* Feat: Add Clear Button to Reset Query Builder (#549)
* Added a small "X" at the end of the search box in the query builder. This X works similarly to what we already have in the Free Text tab, allowing users to quickly clear their query and start over.

* Feat: Add Clear Button to Reset Query Builder (#549)
* Added a small "X" at the end of the search box in the query builder. This X works similarly to what we already have in the Free Text tab, allowing users to quickly clear their query and start over.
* This button also works in Dark Mode.

--- a/static/index.html
+++ b/static/index.html
@@ -60,7 +60,10 @@
                 </ul>
                 <div id = "tabs-1">
                     <div class="query-box">
-                        <input class="form-control query-text" id="query-input" type="text" disabled="disabled">
+                        <div class="position-relative"> <!-- Position relative -->
+                            <input class="form-control query-text" id="query-input" type="text" disabled="disabled">
+                            <button id="clear-query-btn" class="clear-query-btn">x</button> <!-- Added clear button -->
+                        </div>
                         <div class="search-img" id="query-builder-btn"> </div>
                     </div>
                     <div class="filter-info">
