Rename "Person Profile" to "Send Test Data"

--- a/static/test-data.html
+++ b/static/test-data.html
@@ -63,7 +63,7 @@
                                     <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
                                 </button>
                                 <div class="dropdown-menu box-shadow" aria-labelledby="index-btn" id="source-options">
-                                    <li id="option-1" class="source-option">Person Profile</li>
+                                    <li id="option-1" class="source-option">Send Test Data</li>
                                     <li id="option-2" class="source-option">Vector</li>
                                     <li id="option-3" class="source-option">Logstash</li>
                                     <li id="option-4" class="source-option">Fluentd</li>
