Added Elastic Bluk and Splunk HEC

--- a/static/test-data.html
+++ b/static/test-data.html
@@ -69,6 +69,8 @@
                                     <li id="option-4" class="source-option">Fluentd</li>
                                     <li id="option-5" class="source-option">Filebeat</li>
                                     <li id="option-6" class="source-option">Promtail</li>
+                                    <li id="option-6" class="source-option">Splunk HEC</li>
+                                    <li id="option-6" class="source-option">Elastic Bluk</li>
                                 </div>
                             </div>
                             <div><button type="button" class="btn" id="test-data-btn">Send Test Data</button></div>
@@ -94,7 +96,7 @@
                                 <h5 class="myOrg-heading">Setup instructions</h5>
                                 <div class="ingestion-container">
                                     <div>Follow the steps in <a href="" id="setup-instructions-link" target="_blank">Quick start
-                                            guide</a><span id="open-new-tab-icon"></span></div>
+                                            guide<span id="open-new-tab-icon"></span></a></div>
                                 </div>
                             </div>
                             <div class="d-flex mt-4">
