--- a/static/test-data.html
+++ b/static/test-data.html
@@ -70,7 +70,7 @@
                                     <li id="option-5" class="source-option">Filebeat</li>
                                     <li id="option-6" class="source-option">Promtail</li>
                                     <li id="option-6" class="source-option">Splunk HEC</li>
-                                    <li id="option-6" class="source-option">Elastic Bluk</li>
+                                    <li id="option-6" class="source-option">Elastic Bulk</li>
                                 </div>
                             </div>
                             <div><button type="button" class="btn" id="test-data-btn">Send Test Data</button></div>
