--- a/static/test-data.html
+++ b/static/test-data.html
@@ -63,12 +63,14 @@
                                     <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
                                 </button>
                                 <div class="dropdown-menu box-shadow" aria-labelledby="index-btn" id="source-options">
-                                    <li id="option-1" class="source-option">Person Profile</li>
+                                    <li id="option-1" class="source-option">Send Test Data</li>
                                     <li id="option-2" class="source-option">Vector</li>
                                     <li id="option-3" class="source-option">Logstash</li>
                                     <li id="option-4" class="source-option">Fluentd</li>
                                     <li id="option-5" class="source-option">Filebeat</li>
                                     <li id="option-6" class="source-option">Promtail</li>
+                                    <li id="option-6" class="source-option">Splunk HEC</li>
+                                    <li id="option-6" class="source-option">Elastic Bulk</li>
                                 </div>
                             </div>
                             <div><button type="button" class="btn" id="test-data-btn">Send Test Data</button></div>
@@ -94,7 +96,7 @@
                                 <h5 class="myOrg-heading">Setup instructions</h5>
                                 <div class="ingestion-container">
                                     <div>Follow the steps in <a href="" id="setup-instructions-link" target="_blank">Quick start
-                                            guide</a><span id="open-new-tab-icon"></span></div>
+                                            guide<span id="open-new-tab-icon"></span></a></div>
                                 </div>
                             </div>
                             <div class="d-flex mt-4">
