modified the tooltips to accomodate changes after review

--- a/static/index.html
+++ b/static/index.html
@@ -238,17 +238,17 @@
                     <div id="save-query-div" class="save-query-div">
                         <button class="btn saveq-btn below-btn-img" id="saveq-btn" title="Save Query"></button>
                         <button class="btn add-logs-to-db-btn below-btn-img" id="add-logs-to-db-btn" class="mx-3" title="Add panel to dashboard"></button>
-                        <button class="btn mx-2 alert-from-logs-btn below-btn-img" id="alert-from-logs-btn" title="Alert"></button>
+                        <button class="btn mx-2 alert-from-logs-btn below-btn-img" id="alert-from-logs-btn" title="Create Alert"></button>
                         <div class="dropdown download-btn">
                             <button class="btn dropdown-toggle download-all-logs-btn below-btn-img" type="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown" title="Download">
+                                aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown" title="Download Logs">
                             </button>
                             <div class="dropdown-menu box-shadow download-options" aria-labelledby="index-btn" id="save-query-options">
                                 <li id="csv-block" class="query-language-option">Download as CSV</li>
                                 <li id="json-block" class="query-language-option">Download as JSON</li>
                             </div>
                         </div>
-                        <button class="btn show-record-intro-btn below-btn-img" id="show-record-intro-btn"  title="Information"></button>
+                        <button class="btn show-record-intro-btn below-btn-img" id="show-record-intro-btn"  title="Query Information"></button>
                     </div>
                     <div id="views-container">
                         <div class="btn-group" role="group" id="log-view">
