tooltip modified acc to the comment

--- a/static/index.html
+++ b/static/index.html
@@ -248,7 +248,7 @@
                                 <li id="json-block" class="query-language-option">Download as JSON</li>
                             </div>
                         </div>
-                        <button class="btn show-record-intro-btn below-btn-img" id="show-record-intro-btn"  title="Query Information"></button>
+                        <button class="btn show-record-intro-btn below-btn-img" id="show-record-intro-btn"  title="Query Response Information"></button>
                     </div>
                     <div id="views-container">
                         <div class="btn-group" role="group" id="log-view">
