--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
                             <input class="form-control query-text" id="query-input" type="text" disabled="disabled">
                             <button id="clear-query-btn" class="clear-query-btn">x</button> <!-- Added clear button -->
                         </div>
-                        <div class="search-img" id="query-builder-btn"> </div>
+                        <button class="search-img" id="query-builder-btn"></button>
                     </div>
                     <div class="filter-info">
                         <div id="filter-container">
