--- a/static/dependency-graph.html
+++ b/static/dependency-graph.html
@@ -38,10 +38,9 @@
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
-    <script src="./js/lib/d3.v7.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.18.2/cytoscape.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dagre/0.8.5/dagre.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cytoscape-dagre@2.5.0/cytoscape-dagre.min.js"></script>
+    <script src="./js/lib/cytoscape.min.js"></script>
+    <script src="./js/lib/dagre.min.js"></script>
+    <script src="./js/lib/cytoscape-dagre.min.js"></script>
     
     {{ .RunCheck1 | safeHTML }}
 </head>
