Fix: issue #573 is now fixed, text and icon are not getting clashed. Included Clear input button

--- a/static/metrics.html
+++ b/static/metrics.html
@@ -58,6 +58,9 @@
                     </i>
                     <input type="text" class="form-control metrics-input" id="metrics-input"
                         placeholder="Enter PromQL Query" title="Enter PromQL Query">
+
+                    <span class="clear-icon" id="clearMetricsInput" title="Clear"></span>
+
                 </div>
                 <div class="text-end">
                     <button class="btn run-metrics-query-btn" id="run-metrics-query-btn" title="Run Query">Run Query</button>
