fix: payload in request and by default 1h selected

--- a/static/dependency-graph.html
+++ b/static/dependency-graph.html
@@ -64,7 +64,7 @@
                         <p class="dt-header">Search the last</p>
                         <div class="ranges">
                             <div class="inner-range dep">
-                                <div id="now-1h" class="range-item">1 Hr</div>
+                                <div id="now-1h" class="range-item active">1 Hr</div>
                                 <div id="now-6h" class="range-item">6 Hrs</div>
                                 <div id="now-2d" class="range-item">2 Days</div>
                             </div>
