--- a/static/service-health.html
+++ b/static/service-health.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="mt-3">
-                <input type="text" class="search-input" placeholder="Search and Filter based on resource attributes">
+                <input type="text" class="search-input" placeholder="Search and Filter based on service name">
             </div>
             <div class="mt-3 h-100 mb-2" id="tracing-container">
                 <div id="ag-grid" class="ag-theme-mycustomtheme">
