--- a/static/trace.html
+++ b/static/trace.html
@@ -49,8 +49,10 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="d-flex">
                 <div id="timeline-container">
+                </div>
+                <div class="span-details-container" style="display: none;">
                 </div>
             </div>
         </div>
