--- a/static/live-tail.html
+++ b/static/live-tail.html
@@ -93,7 +93,7 @@
                 <div class="dropdown">
                     <button class="btn dropdown-toggle index-btn" type="button" id="index-btn" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown"
-                        title="Index Name to search on">
+                        title="Index Name to search on" style="width: 120px;">
                         <span>Index</span>
                         <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
                         <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
