--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -56,10 +56,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/jquery.dataTables.min.js"></script>
     <script src="./js/lib/dataTables.scroller.min.js"></script>
+    <script>
+        var defaultTheme = Cookies.get('theme') || 'light';
+        $('html').attr('data-theme', defaultTheme);
+    </script>
     {{.RunCheck1 | safeHTML}}
 </head>
 
-<body data-theme="light">
+<body>
     <div id="cstats-app-container">
         <div id="app-side-nav">
         </div>
