--- a/static/metrics-explorer.html
+++ b/static/metrics-explorer.html
@@ -147,7 +147,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                       Style : <input id="line-style-input" type="text" value="Solid">
                     </div>
                     <div id="stroke-div">
-                      Stroke : <input id="stroke-input" type="text" value="Line">
+                      Stroke : <input id="stroke-input" type="text" value="Normal">
                     </div>
                 </div>
                 <hr>
