--- a/static/metrics-explorer.html
+++ b/static/metrics-explorer.html
@@ -130,13 +130,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                    <div id="metrics-queries"></div>
                    <div id="metrics-formula"></div>
                     <div class="mt-3 d-flex ">
-                        <button id="add-query" class="btn">Add Query</button>
-                        <button id="add-formula" class="btn">Add Formula</button>
-                        <!-- <button id="run" class="btn">Run</button> -->
+                        <button id="add-query" class="btn"><span class="plus-icon">+</span> Add Query</button>
+                        <button id="add-formula" class="btn"><span class="plus-icon">+</span> Add Formula</button>
                     </div>
                 </div>
                 <hr>
-                <div id="visualization-options" class="d-flex">
+                <div id="visualization-options" class="d-flex mb-3 mt-3">
                     <div>
                       Display : <input id="display-input" type="text" value="Line chart">
                     </div>
@@ -160,11 +159,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         <label class="label">One graph per query</label>
                     </div>
                 </div>
-                <hr>
                 <div id="metrics-graphs" class="metrics-graph-container mt-3">
     
                 </div>
-                <div id="merged-graph-container" style="display: none;"></div>
+                <div id="merged-graph-container" style="display: none;" class="mt-3"></div>
             </div>
         </div>
 
