Added logs/metrics container

--- a/static/trace.html
+++ b/static/trace.html
@@ -78,6 +78,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <div class="span-details-container" style="display: none;">
                 </div>
             </div>
+            <div class="logs-metrics-container">
+                <div class="section-buttons mt-0">
+                    <div class="section-button active" id="search-traces">Logs</div>
+                    <div class="section-button" id="dependency-graph">Metrics</div>
+                </div>
+            </div>
         </div>
         <div id="app-footer">
             2024 &copy; SigLens
