TimePicker and Theme Button Fix

--- a/static/metrics-explorer.html
+++ b/static/metrics-explorer.html
@@ -175,10 +175,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </div>
 
     <script src="./js/common.js?cb=1_1_10"></script>
+    <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/navbar.js?cb=1_1_10"></script>
     <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
-    <script src="./js/search.js?cb=1_1_10"></script>
     <script src="./js/metrics-explorer.js"></script>
 
     {{ .RunCheck2 | safeHTML }}
